# MAOMaps

./: .gitmodules  README.md
collect_data/: gt_map_creator.py  gt_path_writer.py  keyboard_navigation_ros.py  pose_writer.py  start_pose_saver.py  truepath_writer.py
collect_data/habitat_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
collect_data/habitat_ros/launch/: keyboard_agent.launch  shortest_path_follower_agent.launch
collect_data/habitat_ros/scripts/: custom_sensors.py  keyboard_agent.py  main.py  publishers.py  shortest_path_follower_agent.py
evaluate/: compute_2d_ame.py  compute_ate_rpe.py  correction_angles.txt  estimate_2d_metrics.ipynb  mappath_transformer.py  mappath_writer.py  pointcloud_transformer.py
evaluate/slam_comparison/: CMakeLists.txt  README.md  octomap_processing.cpp  package.xml  publisher.cpp  subscriber.cpp
